k8s/produccion/deployment.yaml
# Este archivo define el Deployment para el microservicio de login en producción.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-login
  labels:
    app: front-login
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-login
  template:
    metadata:
      labels:
        app: front-login
    spec:
      containers:
        - name: front-login
          # Pendiente: utilizar forma de no hardcodear la imagen y actualizar versiones
          image: southamerica-east1-docker.pkg.dev/construtem/microservicios-construtem/front-login:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          #Descomentar si se necesita configurar el backend URL para ser usado por el frontend como variable de entorno
          #env:
            #- name: BACKEND_URL
              #value: "https://api-login.tssw.cl"  # URL del backend de login
