k8s/produccion/ingress.yaml
# Este archivo define un Ingress para el servicio de login en producción.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-login-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - login.tssw.cl
      secretName: front-login-tls
  rules:
    - host: login.tssw.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-login-service
                port:
                  number: 80
